Added further tests, fixed bugs